--- a/论文导读.md
+++ b/论文导读.md
@@ -13,9 +13,9 @@
 ### LGVI和LGVI
 基于Stable Diffusion框架，将网络架构进行了时间扩展，即在输入的维度上加入了时间维。并且引入时间注意力机制（关注时序信息，并且其复杂度低，不影响总的运算效率）。
 
-LGVI的目标函数为 `l_diff + l_mask`。其中l_diff是扩散模型的损失，l_mask是掩码预测的损失。
-LGVI-I with MLLM的目标函数为`l_diff + l_mask + l_lm`。其中l_lm是语言建模损失（即真实的句子分布和预测的句子分布之间的差异）
+LGVI的目标函数为 `l_diff + l_mask`。其中l_diff是扩散模型的损失，l_mask是掩码预测的损失。  
+LGVI-I with MLLM的目标函数为`l_diff + l_mask + l_lm`。其中l_lm是语言建模损失（即真实的句子分布和预测的句子分布之间的差异）。  
 两个模型的主要区别在于原始模型直接将简短的文本编码后输入Cross Attention；而改进模型将MLLM的输出通过MM head输入Cross Attention。
 
 ## 待解决的问题
-这篇文章主要提出了一个数据集和基线模型。并且引入了MLLMs引导修复。但是网络相比于其他方法而言效果不好，一致性存在严重问题，视频时长也比较短。
+这篇文章主要提出了一个数据集和基线模型。并且引入了MLLMs引导修复。但是网络相比于其他方法而言效果不好，一致性存在严重问题，能够生成和处理的视频时长也比较短。
